# fediblockhole

./: .flake8  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
chart/: .helmignore  Chart.yaml  fediblockhole.conf.toml  values.yaml
chart/templates/: _helpers.tpl  configmap-conf-toml  configmap-conf-toml.yaml  cronjob-fediblock-sync.yaml  cronjob-fediblockhole.yaml  secrets.yaml
container/: .dockerignore  Dockerfile
etc/: sample.fediblockhole.conf.toml
samples/: demo-allowlist-01.csv  demo-allowlist-02.csv  demo-blocklist-01.csv
src/fediblockhole/: __init__.py  blocklist_parser.py  blocklists.py  const.py
tests/: conftest.py  data-noop-01.csv  data-silences-01.csv  test_allowlist.py  test_blockseverity.py  test_cmdline.py  test_configfile.py  test_domainblock.py  test_merge_comments.py  test_merge_thresholds.py  test_mergeplan.py  test_parser_csv.py  test_parser_csv_mastodon.py  test_parser_json.py  test_parser_rapidblockcsv.py  test_parser_rapidblockjson.py
tests/fixtures/: data-mastodon.json  data-noop-01.csv  data-rapidblock.json  data-suspends-01.csv
tests/helpers/: util.py
