[project]
name = "fediblockhole"
version = "0.4.5"
description = "Federated blocklist management for Mastodon"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.6"
keywords = ["mastodon", "fediblock"]
authors = [ 
    {name = "Justin Warren"}, {email = "justin@eigenmagic.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.6",
]
dependencies = [
    "requests",
    "toml"
]

[project.urls]
homepage = "https://github.com/eigenmagic/fediblockhole"
documentation = "https://github.com/eigenmagic/fediblockhole"
repository = "https://github.com/eigenmagic/fediblockhole"

[project.scripts]
fediblock-sync = "fediblockhole:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]